Fix folder list model when changing drives on Windows.

The folder list model implementation drops drive letters when
changing folder on Windows. Fix this and add a Windows specific
test case.

Task-number: QTBUG-26620
Change-Id: If58551ba01b56343ebf44512620207e49d83ba09
Reviewed-by: Matthew Vogt <matthew.vogt@nokia.com>